Käyttöliittymän puolelta koodia otettu mukaan ja luotu yksi uusi Java-luokka Tietokanta-kansioon.